--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<title>Document</title>
 </head>
 <body>
-		4916 9851 0046 4970
 	<div id="app">
 		<h1>String: {{ massage }}</h1>
 		<h1>Sum: {{ 3+2 }}</h1>
@@ -22,18 +21,8 @@
 		</div>
 	</div>
 
-	<!--<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>-->
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
 	<script>
-		let x = 7;
-		let y = 7;
-		console.log('x= ',x);
-		console.log('y= ',y);
-		x<=8;
-		y==8;
-		console.log('x= ',x);
-		console.log('y= ',y);
-	</script>
-	<!--<script>
 		
 	new Vue({
 		el: '#app',
@@ -49,6 +38,6 @@
 			}
 		}
 	});
-	</script>-->
+	</script>
 </body>
 </html>
