--- a/src/index.html
+++ b/src/index.html
@@ -3,4 +3,38 @@ layout: default
 title: Blog | Home
 ---
 
-Hello!
+<div class="stories">
+	<div class="stories__item">
+		<img class="stories__preview" src="assets/images/stories/stories1.jpg" alt="">
+		<div class="stories__title">Авария на перекрестке</div>
+		<time class="stories__data" datatime="2020-08-25">25.08.2020</time>
+	</div>
+	<div class="stories__item">
+		<img class="stories__preview" src="assets/images/stories/stories2.jpg" alt="">
+		<div class="stories__title">Чудный дизайн присыпки</div>
+		<time class="stories__data" datatime="2020-08-25">25.08.2020</time>
+	</div>
+	<div class="stories__item">
+		<img class="stories__preview" src="assets/images/stories/stories3.jpg" alt="">
+		<div class="stories__title">Мои путишествия</div>
+		<time class="stories__data" datatime="2020-08-25">25.08.2020</time>
+	</div>
+	<div class="stories__item">
+		<img class="stories__preview" src="assets/images/stories/stories4.jpg" alt="">
+		<div class="stories__title">Работать руками дело хитрое</div>
+		<time class="stories__data" datatime="2020-08-25">25.08.2020</time>
+	</div>
+</div>
+<div class="add-post">
+	<from class="add-post__form" action="/" method="post">
+		<textarea class="add-post__textarea" name="post-text" placeholder="Напишите что-нибудь"></textarea>
+		<div class="add-post__form-actions">
+			<label class="add-post__file" for="add-post-file">
+				<input type="file" id="add-post-file">
+			</label>
+			<button class="add-post__send" type="submit">
+				<img src="assets/images/icon/send.svg" alt="send">
+			</button>
+		</div>
+	</from>
+</div>
